# pyspeller

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION.md  README.md  pyproject.toml  pyspeller.py  setup.py  yandex_speller.py
pyspeller/: __init__.py  client.py  exceptions.py  types.py
