[project]
name = "pyspeller"
dynamic = ["version"]
description = "Библиотека для проверки орфографии с использованием API Яндекс Спеллер"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]
keywords = ["yandex", "speller", "api", "spellcheck", "python", "async"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyspeller/__about__.py"